# cordhook

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  eslint-react.json  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
apps/desktop/: .eslintrc.json  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: cmd.rs
apps/landing/: .eslintrc.json  README.md  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
apps/landing/components/: Footer.tsx  Icons.tsx
apps/landing/pages/: _app.tsx  _document.tsx  download.tsx  index.tsx
apps/landing/public/: site.webmanifest
apps/landing/types/: types.ts
apps/landing/utils/hooks/: useGithubReleases.ts
apps/mobile/: App.tsx  README.md  app.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/mobile/components/: InputField.tsx
apps/mobile/types/: styled.d.ts
apps/mobile/utils/: Theme.ts
apps/web/: .eslintrc.json  README.md  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/pages/: _app.tsx  _document.tsx
apps/web/public/: site.webmanifest
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  main.rs
src/components/: ContentSection.tsx  EmbedSection.tsx  FormInputField.tsx  Navbar.tsx  TextInputField.tsx  ThemeButton.tsx  WebhookSection.tsx
src/pages/: _app.tsx  _document.tsx  index.tsx
src/styles/: GlobalStyles.tsx
src/utils/: Theme.ts
